--- a/bokeh-plotting.yml
+++ b/bokeh-plotting.yml
@@ -81,6 +81,7 @@ dependencies:
   - pyzmq=18.1.0=py37ha925a31_0
   - qt=5.9.7=vc14h73c81de_0
   - qtconsole=4.5.5=py_0
+  - scipy=1.3.1=py37h29ff71c_0
   - send2trash=1.5.0=py37_0
   - setuptools=41.0.1=py37_0
   - sip=4.19.8=py37h6538335_0
